Refactor HTML and add CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
    <link rel="icon" type="image/jpg" href="./img/total-eclipse-of-the-octocat.jpg">
    <!-- Para que el navegador sepa que imagen usar como favicon -->
 
+   <link rel="stylesheet" href="./css/style.css">
+
    <title>Reforzando mi HTML 💻</title>
 
-   <style>
-      body {
-         background-color: #fbfbfb;
-         font-family: Arial, Helvetica, sans-serif;
-         color: #333;
-      }
-   </style>
+
 </head>
 <!-- Aquí el Body -->
 
@@ -222,12 +218,26 @@
                   </datalist>
                   <label for="">Con qué lenguaje te sientes más cómodo?</label>
                   <input list="languajes" name="languajes" id="">
-               </div>
 
+               </div>
             </fieldset>
 
             <input type="submit" value="Enviar contacto">
          </form>
+
+         <aside>
+            <!--Usar Próximamente -->
+            <search class="search">
+               <form action="/search">
+                  <label>
+                        Usar Próximamente, al momento no funciona
+                     <input type="search" name="midu">
+                     <button>Buscar</button>
+
+                  </label>
+               </form>
+            </search>
+         </aside>
       </section>
 
    </main>
