--- a/index.html
+++ b/index.html
@@ -130,23 +130,61 @@
       <section>
          <h2>Preguntas frecuentes</h2>
 
-         <details open>
+         <details open name="open-one-detail">
             <summary>Qué estudios tienes?</summary>
             <p>Estudié en Digital House</p>
          </details>
-         <details>
+         <details name="open-one-detail">
             <summary>Qué tecnologías manejas?</summary>
             <p>Manejo HTML, CSS, JavaScript, React, Node</p>
          </details>
-         <details>
+         <details name="open-one-detail">
             <summary>Qué lenguajes hablas?</summary>
             <p>Hablo español, inglés y portugués</p>
          </details>
-         <details>
+         <details name="open-one-detail">
             <summary>Qué hobbies tienes?</summary>
             <p>Me gusta jugar al fútbol y al tenis</p>
          </details>
       </section>
+
+
+      <!-- !Slider  -->
+
+      <section class="slider-container">
+         <div class='slider'>
+            <a name="img_1">
+               <img
+                  src="https://images.unsplash.com/photo-1525382455947-f319bc05fb35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
+            </a>
+            <a name="img_2">
+               <img
+                  src="https://images.unsplash.com/photo-1504713721722-f73b4ccdfe6a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
+            </a>
+            <a name="img_3">
+               <img
+                  src="https://images.unsplash.com/photo-1532458198880-add09ce3b2f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80" />
+            </a>
+            <a name="img_4">
+               <img
+                  src="https://images.unsplash.com/photo-1524767615-3d4139c938a3?ixlib=rb-1.2.1&auto=format&fit=crop&w=2255&q=80" />
+            </a>
+         </div>
+
+         <div
+            style="background: radial-gradient(ellipse 80% 80% at 50% -20%,#7877c64d,#fff0); position: absolute; top: 0; width: 100%; height: 100%; left:0; z-index: -1">
+         </div>
+
+         <ul class="markers">
+            <li><a href="#img_1"></a></li>
+            <li><a href="#img_2"></a></li>
+            <li><a href="#img_3"></a></li>
+            <li><a href="#img_4"></a></li>
+         </ul>
+
+      </section>
+
+      <!-- !Slider -->
 
 
       <section>
@@ -230,7 +268,7 @@
             <search class="search">
                <form action="/search">
                   <label>
-                        Usar Próximamente, al momento no funciona
+                     Usar Próximamente, al momento no funciona
                      <input type="search" name="midu">
                      <button>Buscar</button>
 
